feat: validate api input with json schema and add document
